Generate pb files
