# components/automate-gateway/api/stats.pb.swagger.go
@@ -48,6 +48,40 @@ func init() {
         ]
       }
     },
+    "/api/v0/compliance/reporting/stats/nodes/count/updated": {
+      "put": {
+        "summary": "UpdateTelemetryReported",
+        "description": "Acknowledge API  to updates the last complaince telemetry reported date in postgres\n\nAuthorization Action:\n` + "`" + `` + "`" + `` + "`" + `\niam:introspect:getAll\n` + "`" + `` + "`" + `` + "`" + `",
+        "operationId": "StatsService_UpdateTelemetryReported",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chef.automate.api.compliance.reporting.stats.v1.UpdateTelemetryReportedResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/chef.automate.api.compliance.reporting.stats.v1.UpdateTelemetryReportedRequest"
+            }
+          }
+        ],
+        "tags": [
+          "StatsService"
+        ]
+      }
+    },
     "/api/v0/compliance/reporting/stats/profiles": {
       "post": {
         "summary": "Read Profiles",
@@ -709,6 +743,30 @@ func init() {
             "$ref": "#/definitions/chef.automate.api.compliance.reporting.stats.v1.Trend"
           },
           "description": "Set of statistics for passed/failed/skipped nodes or controls in a trendgraph friendly data format."
+        }
+      }
+    },
+    "chef.automate.api.compliance.reporting.stats.v1.UpdateTelemetryReportedRequest": {
+      "type": "object",
+      "properties": {
+        "lastTelemetryReportedAt": {
+          "type": "string",
+          "format": "date-time",
+          "title": "last complaince telemetry reported date"
+        }
+      }
+    },
+    "chef.automate.api.compliance.reporting.stats.v1.UpdateTelemetryReportedResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "title": "UUID from database"
+        },
+        "lastTelemetryReportedAt": {
+          "type": "string",
+          "format": "date-time",
+          "title": "last complaince telemetry reported date"
         }
       }
     },
